force-app/main/default/objects/Notification__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <formula>If(
   Or (
    User_Disabled__c = true,
    Send_Count__c = Max_Count__c
   ),
   false, 
   true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>