force-app/main/default/objects/Notification__c/fields/Date_First_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_First_Sent__c</fullName>
    <label>Date First Sent</label>
    <type>Date</type>
</CustomField>