force-app/main/default/objects/Notification__c/fields/Date_Last_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Sent__c</fullName>
    <label>Date Last Sent</label>
    <type>Date</type>
</CustomField>