force-app/main/default/objects/Notification__c/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <label>NotificationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Notification</valueSetName>
    </valueSet>
</CustomField>