force-app/main/default/objects/Notification__c/fields/User_Disabled__c.field-meta.xml
<CustomField>
    <fullName>User_Disabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Disabled</label>
    <type>Checkbox</type>
</CustomField>